--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         <button id="tip">15%</button>
         <button id="tip">25%</button>
         <button id="tip">30%</button>
-        <button id="tip">50%</button>
+        <button id="tip">Custom</button>
       </div>
 
       <!-- number of people -->
       <div class="people-input-section">
         <div class="number-of-people">
           <label for="people-number">Number of People</label>
-          <p></p>
+          <p id="error">Can't be zero</p>
         </div>
         <div class="people-input">
           <input type="number" id="people-number" placeholder="0">
@@ -55,18 +55,7 @@
     <div class="right"></div>
   </div>
 
-  Bill
-
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
+ 
   Tip Amount
   / person
 
