--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <p>SPLI</p>
   <p>TTER</p>
 
-  <!-- containerr -->
+  <!-- container -->
   <div class="container">
-
+    
     <!-- left-container -->
     <div class="left">
 
