--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="stylesheet" href="style.css">
   <title>Tip calculator app</title>
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <!-- heading -->
@@ -43,7 +39,7 @@
       <div class="people-input-section">
         <div class="number-of-people">
           <label for="people-number">Number of People</label>
-          <p id="error">Can't be zero</p>
+          <label for="people-number" id="error">Can't be zero</label>
         </div>
         <div class="people-input">
           <input type="number" id="people-number" placeholder="0">
@@ -69,7 +65,8 @@
       </div>
       
       <!-- button -->
-      <button>RESET</button> 
+       <button id="calculate">CALCULATE</button>
+      <button id="reset">RESET</button> 
        
     </div>
   </div>
