--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
   <!-- heading -->
-  <p>SPLI</p>
-  <p>TTER</p>
+   <div class="heading">
+    <p>SPLI</p>
+    <p>TTER</p>
+   </div>
+
 
   <!-- container -->
   <div class="container">
